...
    fun updateConfirmPassword(confirmPassword: String) {
        _confirmPassword.value = confirmPassword
        validateConfirmPassword()
    }

    private fun validateEmail() {
        _emailError.value = if (registerValidator.isEmailValid(_email.value)) "" else "Email inválido"
    }

    private fun validatePassword() {
        _passwordError.value = registerValidator.getPasswordError(_password.value)
    }

...
